# agent-rag-study

./: .gitignore  README.md  adr.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
ground_docs/: common_sense_animal.md  common_sense_art.md  common_sense_geography.md  common_sense_history.md  common_sense_math.md  common_sense_philosophy.md  common_sense_science.md  common_sense_technology.md
src/: cli.py  langsmith_test.py
src/agent_v1/app/: config.py  models.py  retriever.py
src/agent_v1/chainlit/: app.py
src/agent_v2/app/: config.py  graph_test.py  models.py
src/agent_v2/app/graph/: build_graph.py  state.py
src/agent_v2/chainlit/: app.py
src/agent_v3/app/: config.py  models.py
src/agent_v3/app/graph/: build_graph.py  state.py
src/agent_v3/app/retrievers/: aisearch_store.py
src/agent_v3/chainlit/: app.py
src/agent_v3/scripts/: ingest.py
src/agent_v4/app/: config.py  models.py
src/agent_v4/app/graph/: build_graph.py  state.py
src/agent_v4/chainlit/: app.py
src/agent_v5/app/: models.py
src/agent_v5/app/graph/: state.py  (+1 more)
src/agent_v5/chainlit/: app.py
src/agent_v6/app/: models.py
src/agent_v6/chainlit/: app.py
src/agent_v6/cli/: run_agentic_graph.py
src/rag_agentic/: config.py  graph.py  ingest.py
src/rag_agentic/nodes/: generate_answer.py  generate_question.py  grade.py  rewrite_question.py
src/ui/: app.py  app_test.py  app_test_graph.py
tests/: test_graph.py
tests/nodes/: test_generate_answer.py  test_generate_question.py  test_grade.py  test_rewrite_question.py
(+46 files in other folders)
